add gitignore, add active qustion

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="buttonGroup">
             <div class='button' id='prev'><a href='#'>Prev</a></div>
             <div class='button' id='next'><a href='#'>Next</a></div>
-            <div class='button btn-disabled' id='checkAnswers'> <a href='#'>Show results</a></div>
+            <div class='button button-disabled' id='checkAnswers'> <a href='#'>Show results</a></div>
         </div>
         <div id='navigation' class='buttonGroup'></div>
     </div>
