html and scss update

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
 <body>
     <div id='container'>
-        <div class="titleGroup" id='title'>
+        <div class="title__group" id='title'>
             <h1>Kviz</h1>
         </div>
         <div id='quiz'></div>
-        <div class="buttonGroup">
-            <div class='button' id='prev'><a href='#'>Prev</a></div>
-            <div class='button' id='next'><a href='#'>Next</a></div>
-            <div class='button button-disabled' id='checkAnswers'> <a href='#'>Show results</a></div>
+        <div class="button__group">
+            <div class='button' id='prev'><a href='javascript:void(0)'>Prev</a></div>
+            <div class='button' id='next'><a href='javascript:void(0)'>Next</a></div>
+            <div class='button button-disabled' id='checkAnswers'> <a href='javascript:void(0)'>Show results</a></div>
         </div>
-        <div id='navigation' class='buttonGroup'></div>
+        <div id='navigation' class='button__group'></div>
     </div>
 
     <script type='text/javascript' src='js/main.js'></script>
