--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         </div>
         <div id='navigation' class='button__group'></div>
     </div>
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <h3></h3>
+        </div>
+    </div>
 
     <script type='text/javascript' src='js/main.js'></script>
 </body>
