update max ans logic

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <div id='quiz'></div>
         <div class="button__group">
-            <div class='button' id='prev'><a href='javascript:void(0)'>Prev</a></div>
-            <div class='button' id='next'><a href='javascript:void(0)'>Next</a></div>
-            <div class='button button-disabled' id='checkAnswers'> <a href='javascript:void(0)'>Show results</a></div>
+            <div class='button' id='prev'><a href='javascript:void(0)'>Prethodno</a></div>
+            <div class='button' id='next'><a href='javascript:void(0)'>Sljedeće</a></div>
+            <div class='button button-disabled' id='checkAnswers'> <a href='javascript:void(0)'>Prikaži rezultat</a></div>
         </div>
         <div id='navigation' class='button__group'></div>
     </div>
